# ulfius

./: .gitignore  .gitmodules  .travis.yml  API.md  API_8md.html  CHANGELOG.md  CMakeLists.txt  INSTALL.md  INSTALL_8md.html  Makefile  README.md  README_8md.html  annotated.html  classes.html  dir_000001_000000.html  dir_4eeb864c4eec08c7d6b9d3b0352cfdde.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_899b739a24215c8251b29738b8b3a127.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_func_r.html  globals_func_u.html  globals_func_w.html  globals_func_y.html  globals_j.html  globals_m.html  globals_p.html  globals_r.html  globals_s.html  globals_type.html  globals_u.html  (+106 more)
.github/ISSUE_TEMPLATE/: ulfius-bug-report.md  ulfius-feature-request.md
.github/workflows/: ccpp.yml  codeql-analysis.yml
cmake-modules/: CMakeUninstall.cmake.in  CTestCustom.cmake.in  DownloadProject.CMakeLists.cmake.in  FindCheck.cmake  FindGnuTLS.cmake  FindJansson.cmake  FindMHD.cmake  FindOrcania.cmake  FindSubunit.cmake  FindYder.cmake  UlfiusConfig.cmake.in
doc/: API.md  doxygen.cfg
doc/html/: API_8md.html  INSTALL_8md.html  README_8md.html  annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_func_y.html  globals_m.html  globals_p.html  globals_s.html  globals_type.html  globals_u.html  globals_y.html  group__cert.html  group__const.html  group__cookie.html  group__endpoints.html  group__http__smtp__client.html  group__instance.html  group__memory.html  group__misc.html  group__parameters.html  group__request__response__cookie.html  group__stream.html  group__struct.html  group__structures.html  group__u__map.html  group__url__encode.html  group__websocket.html  index.html  md_INSTALL.html  md_README.html  menudata.js  (+26 more)
example_callbacks/http_compression/: README.md  http_compression_callback.c  http_compression_callback.h
example_callbacks/iddawc_jwt_profile/: README.md  iddawc_resource.c  iddawc_resource.h
example_callbacks/jwt_profile/: README.md  oidc_resource.c  oidc_resource.h
example_callbacks/oauth2_bearer/: README.md  glewlwyd_resource.c  glewlwyd_resource.h
example_callbacks/static_compressed_inmemory_website/: README.md  static_compressed_inmemory_website_callback.c  static_compressed_inmemory_website_callback.h
example_callbacks/static_file/: README.md  static_file_callback.c  static_file_callback.h
example_programs/: .gitignore  CMakeLists.txt  Makefile  README.md
example_programs/auth_example/: Makefile  README.md  auth_client.c  auth_server.c
example_programs/cmake-modules/: FindMHD.cmake  FindOrcania.cmake  FindUlfius.cmake  FindYder.cmake
example_programs/include/: u_example.h
example_programs/injection_example/: Makefile  injection_example.c
example_programs/multiple_callbacks_example/: Makefile  README.md  multiple_callbacks_example.c
example_programs/proxy_example/: Makefile  proxy.c
example_programs/request_example/: Makefile  README.md  client.c  mail.c  server.c
example_programs/sheep_counter/: Makefile  README.md  sheep_counter.c
example_programs/sheep_counter/static/: form.html  index.html  upload.html
example_programs/simple_example/: Makefile  README.md  simple_example.c
example_programs/stream_example/: Makefile  stream_client.c  stream_example.c
example_programs/test_u_map/: Makefile  README.md  test_u_map.c
example_programs/websocket_example/: Makefile  README.md  websocket_client.c  websocket_example  websocket_example.c  websocket_server.c
example_programs/websocket_example/static/: index.html  styles.css
examples/: Makefile  README.md
examples/auth_example/: Makefile  auth_client.c  auth_server.c
examples/injection_example/: Makefile  README.md  injection_example.c
examples/multiple_callbacks_example/: Makefile  README.md  multiple_callbacks_example.c
examples/proxy_example/: Makefile  README.md  proxy.c
examples/request_example/: Makefile  client.c  mail.c  send_requests.c  server.c
examples/sheep_counter/: Makefile  README.md  sheep_counter.c
examples/simple_example/: Makefile  simple_example.c
examples/stream_example/: Makefile  README.md  stream_client  stream_client.c  stream_example.c
examples/test_u_map/: Makefile  test_u_map.c
exemple/: Makefile  example.c
exemples/sheep_counter/: Makefile  sheep_counter.c
exemples/simple_example/: Makefile  example.c
include/: u_private.h  ulfius-cfg.h  ulfius-cfg.h.in  ulfius.h  yuarel.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+30 more)
src/: Makefile  base64.c  libulfius.so.2.6.6  libulfius.so.2.6.7  u_map.c  u_private.h  u_request.c  u_response.c  u_send_request.c  u_websocket.c  ulfius.c  ulfius.h  yuarel.c
test/: Makefile  client.crt  client.key  core  core.c  example_callbacks.c  framework  framework.c  run_test.sh  u_instance  u_map  u_map.c  valgrind-core.txt  valgrind-framework.txt  valgrind-u_map.txt  valgrind-websocket.txt  valgrind.txt  websocket  websocket.c
test/autobahn/: .gitignore  Dockerfile  Dockerfile.client-http  Dockerfile.client-https  Dockerfile.server  Makefile  ulfius_ws_echo_client.c  ulfius_ws_echo_server.c  valgrind.txt
test/cert/: client1.crt  client1.key  client2.crt  client2.key  client3.crt  client3.key  create-cert.sh  root1.crt  root1.key  (+8 more)
uwsc/: Makefile  README.md  uwsc.c
(+67 files in other folders)
